--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   mongodb:
-    image: mongo:5.0
+    image: mongo:latest
     container_name: mongodb
     restart: always
     environment:
@@ -12,7 +12,7 @@ services:
       - mongodb_data:/data/db
 
   mongo-express:
-    image: mongo-express:0.54
+    image: mongo-express:latest
     container_name: mongo-express
     restart: always
     ports:
